# VF-NODE-ICLR2025

./: .gitignore  pyproject.toml
confs/: default.yaml  test.yaml
confs/model/: StiffNeuralODE.yaml
confs/ode/: ChemicalReaction.yaml
data/: __init__.py  ode.py
engine/: _trainer.py
models/: __init__.py  _latent_ode.py  _neural_ode.py  _stiff_neural_ode.py
scripts/: main.py  test.py
utils/: interp.py
