[project]
name = "vf-node-iclr2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "csaps>=1.3.3",
  "diffrax>=0.7.0",
  "equinox>=0.13.2",
  "hydra-core>=1.3.2",
  "interpax>=0.3.12",
  "jax[cuda13]>=0.8.1",
  "jaxtyping>=0.3.3",
  "matplotlib>=3.10.8",
  "numpy>=2.3.5",
  "omegaconf>=2.3.0",
  "optax>=0.2.6",
  "optimistix>=0.0.11",
  "pandas>=2.3.3",
  "wandb>=0.23.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
